--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -217,7 +217,7 @@ h2.weather,
     position : relative;
     overflow : hidden;
     height : 70vh;
-    padding : 10px 0 0;
+    padding : 10px 0 200px;
     /*border-radius : 10px;*/
     /*background    : #fff ;*/
     /*overflow-y      : auto;*/
@@ -229,6 +229,7 @@ h2.weather,
     overflow-y : auto;
     width : calc(100% + 10px);
     min-height : 100%;
+    height:70vh;
     margin : 0 0 0 0;
     padding : 30px 0 0;
     text-align : left;
