--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -234,7 +234,14 @@ h2.weather,
 
 
 /*SURVEY FRAMES*/
-
+#survey_progress {
+    width: 30%;
+    margin: 0 auto 20px;
+    background-color: #ccc;
+    position:absolute; 
+    top:34px;
+    right:10px;
+}
 .survey .m-b-md {
     margin-bottom: 10px;
 }
@@ -252,9 +259,7 @@ h2.weather,
 }
 
 .survey .submits .progress {
-    width: 30%;
-    margin: 0 auto 20px;
-    background-color: #ccc;
+    
 }
 
 .survey .nav-primary .surveys a {
@@ -269,11 +274,12 @@ h2.weather,
 .surveyFrame {
     position: relative;
     overflow: hidden;
-    height: 70vh;
     padding: 10px 0 200px;
     /*border-radius : 10px;*/
     /*background    : #fff ;*/
     /*overflow-y      : auto;*/
+    transition: .2s height ease-in-out;
+    border:1px solid blue;
 }
 
 .customform {
@@ -281,12 +287,14 @@ h2.weather,
     overflow: hidden;
     overflow-y: auto;
     width: calc(100% + 10px);
-    min-height: 100%;
-    height: 70vh;
+/*    min-height: 100%;
+    height: 70vh;*/
     margin: 0 0 0 0;
     padding: 30px 0 0;
     text-align: left;
     color: #222;
+    transition: .2s height ease-in-out;
+    border:1px solid red;
 }
 
 .customform .required .q_label {
@@ -312,7 +320,6 @@ h2.weather,
     display: block;
     width: 100%;
     margin: 0;
-    height: 80vh;
     padding: 0;
     vertical-align: top;
     opacity: 0;
@@ -375,6 +382,13 @@ h2.weather,
     vertical-align: top;
     background: url(../images/ajax-loader.gif) 0 0 no-repeat;
     background-size: contain;
+}
+
+.customform input[type='number'] {
+    max-width:55px; 
+}
+.customform #core_phone {
+    max-width:100%;
 }
 
 .profile_card .hasLoading:after {
@@ -1545,6 +1559,7 @@ input[readonly] {
 }
 
 .redcap {
+    margin-top:20px;
     display: block;
     text-align: center;
     font-style: normal;
@@ -1580,12 +1595,14 @@ input[readonly] {
     line-height: 370%;
     text-indent: -12px;
     background-size: 100%;
+    display:none;
 }
 
 #met_desc {
     float: left;
     margin-left: 10px;
     width: 70%;
+    width:100%;
 }
 
 #met_results h2 {
@@ -1593,7 +1610,8 @@ input[readonly] {
     text-align: center;
     font-size: 360%;
     color: #619361;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    margin-bottom:0;
     border: none;
 }
 
@@ -1729,19 +1747,56 @@ input[readonly] {
 #tcm_results { 
     margin-bottom:40px;  
 }
-.constitution_result{
-    margin:0 0 10px; 
-}
-.constitution_result dt, .constitution_result dd {
+#tcm_results .group {
+    width:33%;
+    text-align:center; 
     display:inline-block; 
-    min-width:400px; 
-
-    text-indent:20px;
-    line-height:150%;
-    font-size:150%;
-    padding:10px 0;
+    vertical-align:middle;
+}
+#tcm_results .subgroup{
+    margin:0 auto;
+    border-radius: 50%;   
+    width:100%;
+    min-width:220px;
+    padding:50px 0 70px;
+    background-image: -moz-radial-gradient(45px 45px 45deg, circle cover, yellow 0%, orange 100%, red 95%);
+    background-image: -webkit-radial-gradient(45px 45px, circle cover, yellow, orange);
+    background-image: radial-gradient(45px 45px 45deg, circle cover, yellow 0%, orange 100%, red 95%);
+    
+    /*animation-name: spin; 
+    animation-duration: 3s; 
+    animation-iteration-count: infinite; 
+    animation-timing-function: linear;*/
 }
 
+#tcm_results .subgroup.Negative{
+    background-image: -moz-radial-gradient(45px 45px 45deg, circle cover, orange 0%, red 100%, red 95%);
+    background-image: -webkit-radial-gradient(45px 45px, circle cover, orange, red);
+    background-image: radial-gradient(45px 45px 45deg, circle cover, orange 0%, red 100%, red 95%);
+}
+
+#tcm_results .subgroup.Positive{
+    background-image: -moz-radial-gradient(45px 45px 45deg, circle cover, yellow 0%, green 100%, red 95%);
+    background-image: -webkit-radial-gradient(45px 45px, circle cover, yellow, green);
+    background-image: radial-gradient(45px 45px 45deg, circle cover, yellow 0%, green 100%, red 95%);
+}
+
+
+#tcm_results .subgroup h4 {
+    font-size:18px;
+    line-height:140%;
+}
+#tcm_results .subgroup ul {
+    list-style:none;
+    margin:0; padding:0; 
+}
+#tcm_results .subgroup li {
+    display:block; 
+    margin:0; padding:0; 
+}
+#tcm_results .subgroup h4 span {
+    white-space:nowrap;
+}
 
 
 /* Landscape layout (with min-width) */
