--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -1582,15 +1582,14 @@ input[readonly] {
     font-size: 14px;
 }
 
+
+
 #met_results {
     overflow: hidden;
-    border-radius: 10px;
-    padding: 20px;
-    background: #E1FBEE;
-    color: #619361;
-    padding: 20px 0;
-    border-radius: 8px;
-    margin-bottom: 40px;
+    opacity:.1;
+}
+#met_results.disclaimed {
+    opacity:1;
 }
 
 #met_results.level_0,
@@ -1613,11 +1612,38 @@ input[readonly] {
     background-size: 100%;
 }
 
-#met_desc {
-    float: left;
-    margin-left: 10px;
-    width: 70%;
-    width:100%;
+#met_aging {
+    background:#FFF1CE;
+}
+#met_bmi {
+    background:#DAE3F2;
+}
+#met_pa {
+    background:#E2F0DA;
+    color: #619361;
+}
+#met_smoking {
+    background:#FAE5D7;
+}
+
+.met_desc {
+    border-radius: 10px;
+    padding: 20px;
+    padding: 20px 0;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+.met_desc div{
+    display:none;
+    margin:0 20px;
+}
+.met_desc a {
+    color: #369;
+    text-decoration: underline;
+}
+#met_results .met_desc  h3{
+    margin-top: 0;
+    margin-bottom:10px; 
 }
 
 #met_results h2 {
@@ -1629,7 +1655,10 @@ input[readonly] {
     margin-bottom:0;
     border: none;
 }
-
+#met_results h3 {
+    margin: 20px;
+    font-size: 24px;
+}
 #met_results dl {
     margin: 0 40px 8px;
     padding: 8px 0;
@@ -1686,7 +1715,6 @@ input[readonly] {
     text-align: center;
     padding: 20px 0;
     border-radius: 8px;
-    margin-bottom: 40px;
     background: #CF9494;
     color: #770000;
 }
@@ -1701,50 +1729,29 @@ input[readonly] {
 }
 
 #mat_pic {
-    background: url(../images/mat_people_cutout.png) repeat-x;
-    background-size: 20%;
-    height: 202px;
-    width: 990px;
-    position: relative;
-    display: inline-block;
+    display: block;
 }
-
-#mat_pic:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 198px;
-    z-index: -2;
-    background: #ccc;
-    /*#00FF22*/
+#mat_pic ul{
+    margin:0; padding:0;
+    display:block; 
+    background: #fff;
+    margin: 0 20px;
+    padding: 20px 0;
+    border-radius: 10px;
 }
-
-#mat_pic:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 198px;
-    z-index: -1;
-    background: #00FF22;
+#mat_pic li {
+    display:inline-block;
+    height: 128px;
+    width:113px;
+    background: url(../images/people_cutout_running.png) top left no-repeat;
+    position:relative;
+    margin-left:-28px; 
 }
-
-#mat_pic.sixsix:after {
-    width: 34%;
+#mat_pic li:first-child{
+    margin-left:0;
 }
-
-#mat_pic.threefive:after {
-    width: 65%;
-}
-
-#mat_pic.fivetwo:after {
-    width: 48%;
-}
-
-#mat_pic.hundo:after {
-    width: 100%;
+#mat_pic li.dead.goGray {
+    background-position:bottom left;
 }
 
 #mat_text {
