--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -64,25 +64,72 @@ h2.weather,
     margin: 0 20px 0 0;
 }
 
-#coming_soon {
-    font-size: 28px;
-    line-height: 150px;
-    height: 150px;
-    text-align: center;
-    color: transparent;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    background-color: #565656;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    text-shadow: 0 2px 3px rgba(255, 255, 255, .5);
-    background: #FFF1CC url(../images/fpo_mwa_coming_soon.png) 50% no-repeat;
-    text-indent: -5000px;
-    background-size: contain;
+#slide_banner{
+    min-height:150px;
+    overflow:hidden;
+    border-radius:5px;
+    box-shadow: 1px 1px 3px 1px #888;
+    background-color:#888;
+}
+#slide_banner ul {
+    margin:0; padding:0; 
+    min-height:150px;
+    position:relative;
+}
+#slide_banner li{
+    display:block;
+    width:100%; 
+    min-height:150px; 
+    position:absolute;
+    top:0; left:40px;
+    background:url(../images/bg_nutrition.jpg) no-repeat;
+    background-size:cover; 
+    transition: .4s left ease-in-out, .5s opacity ease-in-out;
+    opacity:0;
+    z-index:2;
+}
+#slide_banner #slide_pa{
+    background:url(../images/bg_physical_activity.jpg) 0px -130px no-repeat;
+    background-size:cover;
+}
+#slide_banner li.on{
+    opacity:1;
+    left:0;
+    z-index:3;
+}   
+#slide_banner li.on.off{
+    opacity:0; 
+    left:-40px;
+    z-index:2;
+}
+#slide_banner li a{
+    position: absolute;
+    left: 30px;
+    bottom: 10px;
+    display: block;
+    padding: 5px 12px;
+    font-size: 180%;
+    color: #fff;
+    font-weight: 700;
+    text-shadow: 1px 1px 6px #000;
+    z-index:1;
+}
+#slide_banner li a:after{
+    content:"";
+    position:absolute;
+    width:100%;
+    height:44px;
+    z-index:-1;
+    top:0; 
+    left:0;
+    background:#000;
+    opacity:.3;
 }
 
 
+.list-group .nutrilink{ 
+    color:#8C1515; font-weight:bold;
+}
 /*SIMPLE WEATHER WIDGET*/
 
 #weather {
