--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -1957,6 +1957,432 @@ input[readonly] {
     white-space:nowrap;
 }
 
+#grit_results{
+    background:url(../images/photo_sisyphus_mountain.jpg) -197px -170px no-repeat;
+    min-width:960px;
+    min-height:650px;
+    background-size:120%;
+    position:relative;
+    z-index:0;
+    overflow:hidden;
+}
+#grit_results li{
+    position:absolute;
+    background:url(../images/icon_black_flag.png) no-repeat;
+    background-size:contain;
+    width:50px;
+    height:65px;
+    display:block;
+    color:#fff;
+    font-weight:700;
+    line-height:270%;
+    text-indent:12px;
+    z-index:4;
+    transition: 1.5s opacity ease-in-out;
+    opacity:0;
+}
+#grit_results .grit_score_bubble {
+    opacity:0;
+    position:absolute;
+    width:200px; height:200px;
+    top:50px;
+    right:170px;
+    padding:25px 15px;
+    background: gold;
+    border-radius: 100px;
+    box-shadow: 0 0 15px 6px orange;
+    text-align:center; 
+    font-size: 110%;
+    transition: .5s opacity ease-in-out;
+}
+#grit_results .grit_score_bubble h3 {
+    font-size:200%;
+    font-weight:500;
+}
+#grit_results.showflags .grit_score_bubble {
+    opacity:1;
+}
+#grit_results.showflags li {
+    opacity:1;
+}
+#grit_results li.one_hundred {
+    top:45px;
+    left:203px;
+}
+#grit_results li.ninety {
+    top:75px;
+    left:268px;
+}
+#grit_results li.eighty {
+    top:135px;
+    left:333px;
+}
+#grit_results li.seventy {
+    top:245px;
+    left:398px;
+}
+#grit_results li.sixty {
+    top:286px;
+    left:463px;
+}
+#grit_results li.fifty {
+    top:315px;
+    left:528px;
+}
+#grit_results li.forty {
+    top:345px;
+    left:593px;
+}
+#grit_results li.thirty {
+    top:373px;
+    left:658px;
+}
+#grit_results li.twenty {
+    top:407px;
+    left:723px;
+}
+#grit_results li.ten {
+    top:455px;
+    left:788px;
+}
+#grit_results .sisyphus {
+    position:absolute;
+    width:200px;
+    height:200px;
+    z-index:1;
+    bottom:-50px; right:-55px; 
+}
+#grit_results.one_hundred .one_hundred{
+    display:none;
+}
+#grit_results.ninety .ninety{
+    display:none;
+}
+#grit_results.eighty .eighty{
+    display:none;
+}
+#grit_results.seventy .seventy{
+    display:none;
+}
+#grit_results.sixty .sixty{
+    display:none;
+}
+#grit_results.fifty .fifty{
+    display:none;
+}
+#grit_results.forty .forty{
+    display:none;
+}
+#grit_results.thirty .thirty{
+    display:none;
+}
+#grit_results.twenty .twenty{
+    display:none;
+}
+#grit_results.ten .ten{
+    display:none;
+}
+
+#grit_results.one_hundred.animate .sisyphus{
+    animation:pushing_rock_100 10s linear forwards ;
+}
+#grit_results.ninety.animate .sisyphus{
+    animation:pushing_rock_90 9s linear forwards;
+}
+#grit_results.eighty.animate .sisyphus{
+    animation:pushing_rock_80 8s linear forwards;
+}
+#grit_results.seventy.animate .sisyphus{
+    animation:pushing_rock_70 7s linear forwards;
+}
+#grit_results.sixty.animate .sisyphus{
+    animation:pushing_rock_60 6s linear forwards;
+}
+#grit_results.fifty.animate .sisyphus{
+    animation:pushing_rock_50 5s linear forwards;
+}
+#grit_results.forty.animate .sisyphus{
+    animation:pushing_rock_40 4s linear forwards;
+}
+#grit_results.thirty.animate .sisyphus{
+    animation:pushing_rock_30 3s linear forwards;
+}
+#grit_results.twenty.animate .sisyphus{
+    animation:pushing_rock_20 2s linear forwards;
+}
+#grit_results.ten.animate .sisyphus{
+    animation:pushing_rock_10 1s linear forwards;
+}
+
+#grit_results .sisyphus:before{
+    position:absolute;
+    content:"";
+    width:100px; 
+    height:83px;
+    background:url(../images/figure_sisyphus.png) 0 0 no-repeat;
+    background-size:contain;
+    top:70px;
+    left:70px;
+    transform:rotate(30deg);
+    z-index:2;
+}
+#grit_results .sisyphus:after{
+    position:absolute;
+    content:"";
+    width:100px; 
+    height:100px;
+    z-index:1;
+    background:url(../images/photo_sisyphus_rock.jpg) 0 0 no-repeat;
+    background-size:contain;
+}
+#grit_results.pushing .sisyphus:after{
+    animation:spin 3s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(-360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(-360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); } }
+@keyframes pushing_rock_100 { 
+    10% { 
+        bottom:20px;
+        right:40px;
+    } 
+    20% { 
+        bottom:60px;
+        right:100px;
+    } 
+    30% { 
+        bottom:90px;
+        right:170px;
+    } 
+    40% { 
+        bottom:120px;
+        right:230px;
+    } 
+    50% { 
+        bottom:150px;
+        right:300px;
+    } 
+    60% { 
+        bottom:180px;
+        right:360px;
+    } 
+    70% { 
+        bottom:230px;
+        right:425px;
+    } 
+    80% { 
+        bottom:290px;
+        right:505px;
+    } 
+    90% { 
+        bottom:390px;
+        right:555px;
+    } 
+    100% { 
+        bottom:430px;
+        right:615px;
+    } 
+}
+@keyframes pushing_rock_90 { 
+    11% { 
+        bottom:20px;
+        right:40px;
+    } 
+    22% { 
+        bottom:60px;
+        right:100px;
+    } 
+    33% { 
+        bottom:90px;
+        right:170px;
+    } 
+    44% { 
+        bottom:120px;
+        right:230px;
+    } 
+    55% { 
+        bottom:150px;
+        right:300px;
+    } 
+    66% { 
+        bottom:180px;
+        right:360px;
+    } 
+    77% { 
+        bottom:230px;
+        right:425px;
+    } 
+    88% { 
+        bottom:290px;
+        right:505px;
+    } 
+    100% { 
+        bottom:390px;
+        right:555px;
+    } 
+}
+@keyframes pushing_rock_80 { 
+    12% { 
+        bottom:20px;
+        right:40px;
+    } 
+    24% { 
+        bottom:60px;
+        right:100px;
+    } 
+    36% { 
+        bottom:90px;
+        right:170px;
+    } 
+    48% { 
+        bottom:120px;
+        right:230px;
+    } 
+    60% { 
+        bottom:150px;
+        right:300px;
+    } 
+    72% { 
+        bottom:180px;
+        right:360px;
+    } 
+    84% { 
+        bottom:230px;
+        right:425px;
+    } 
+    100% { 
+        bottom:290px;
+        right:505px;
+    } 
+}
+@keyframes pushing_rock_70 { 
+    15% { 
+        bottom:20px;
+        right:40px;
+    } 
+    30% { 
+        bottom:60px;
+        right:100px;
+    } 
+    45% { 
+        bottom:90px;
+        right:170px;
+    } 
+    60% { 
+        bottom:120px;
+        right:230px;
+    } 
+    75% { 
+        bottom:150px;
+        right:300px;
+    } 
+    90% { 
+        bottom:180px;
+        right:360px;
+    } 
+    100% { 
+        bottom:230px;
+        right:425px;
+    } 
+}
+@keyframes pushing_rock_60 { 
+    17% { 
+        bottom:20px;
+        right:40px;
+    } 
+    34% { 
+        bottom:60px;
+        right:100px;
+    } 
+    51% { 
+        bottom:90px;
+        right:170px;
+    } 
+    68% { 
+        bottom:120px;
+        right:230px;
+    } 
+    85% { 
+        bottom:150px;
+        right:300px;
+    } 
+    100% { 
+        bottom:180px;
+        right:360px;
+    }  
+}
+@keyframes pushing_rock_50 { 
+    20% { 
+        bottom:20px;
+        right:40px;
+    } 
+    40% { 
+        bottom:60px;
+        right:100px;
+    } 
+    60% { 
+        bottom:90px;
+        right:170px;
+    } 
+    80% { 
+        bottom:120px;
+        right:230px;
+    } 
+    100% { 
+        bottom:150px;
+        right:300px;
+    } 
+}
+@keyframes pushing_rock_40 { 
+    25% { 
+        bottom:20px;
+        right:40px;
+    } 
+    50% { 
+        bottom:60px;
+        right:100px;
+    } 
+    75% { 
+        bottom:90px;
+        right:170px;
+    } 
+    100% { 
+        bottom:120px;
+        right:230px;
+    } 
+}
+@keyframes pushing_rock_30 { 
+    33% { 
+        bottom:20px;
+        right:40px;
+    } 
+    66% { 
+        bottom:60px;
+        right:100px;
+    } 
+    100% { 
+        bottom:90px;
+        right:170px;
+    } 
+}
+@keyframes pushing_rock_20 { 
+    50% { 
+        bottom:20px;
+        right:40px;
+    } 
+    100% { 
+        bottom:60px;
+        right:100px;
+    } 
+}
+@keyframes pushing_rock_10 { 
+    100% { 
+        bottom:20px;
+        right:40px;
+    } 
+}
+
+
 .constitutions{
     background: #efefef;
     padding: 20px;
